golden/error/lex_fstring_double_hole_unclosed.test
f"This f-string is not closed.{0

# output:
 --> stdin:2:0
  |
2 | 
  | ^
Error: Unclosed hole in f-string, expected '}' here.

 --> stdin:1:30
  |
1 | f"This f-string is not closed.{0
  |                               ^
Note: Hole opened here.
